# jasmin-lsp

./: .gitmodules  README.md  dune-project  example.jazz  go.mod  jasmin-lsp  main.go
_build/: .db  .digest-db  log
_build/default/: jasmin_lsp.dune-package  jasmin_lsp.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/0bb5094b13567c3c4e1ee33245b80e63/: dune__exe___ppx.cmo
_build/default/.ppx/1336c2458836de4939348af6d608ec1b/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: jasmin_lsp.cma  jasmin_lsp.cmxa  jasmin_lsp.cmxs  jasmin_lsp.ml-gen  rpc.pp.ml
_build/default/lib/.jasmin_lsp.objs/: jasmin_lsp__Rpc.impl.d
_build/default/lib/.jasmin_lsp.objs/byte/: jasmin_lsp.cmi  jasmin_lsp.cmo  jasmin_lsp.cmt  jasmin_lsp__Rpc.cmi  jasmin_lsp__Rpc.cmo  jasmin_lsp__Rpc.cmt
_build/default/lib/.jasmin_lsp.objs/native/: jasmin_lsp.cmx  jasmin_lsp__Rpc.cmx
_build/default/lib/.merlin-conf/: lib-jasmin_lsp
_build/default/test/.merlin-conf/: exe-test_jasmin_lsp
_build/install/default/lib/jasmin_lsp/: META  opam  (+1 more)
ast/: dune
jasmin-examples/: example.jazz  example_long.jazz
jasmin-examples/require/: file1.jazz  file2.jazz
lib/: LSP_.ml  diagnostics.ml  dune  initialize_request.ml  lexer.mll  message_handler.ml  notification_handler.ml  parse.ml  parser.mly  request_handler.ml  rpc.ml  rpc_server.ml  syntax.ml  typing.ml  utils.ml
lsp/: message.go
notifications/: dune  notification_handler.ml
requests/: document_highlight.ml  dune  initialize_request.ml  request_handler.ml
rpc/: rpc.go  rpc_test.go
test/: dune
(+3 files in other folders)
