(ocamllex
 (modules lexer))

(menhir
 (flags "--table" "--explain" "--inspection")
 (modules parser))

(library
 (public_name jasmin_lsp.internal)
 (name jasmin_lsp)
 (libraries 
  core
  jasmin.jasmin
  jsonrpc 
  logs
  lsp 
  lwt
  lwt.unix
  ppx_yojson_conv 
  yojson 
 )
 (preprocess 
  (pps 
    lwt_ppx
    ppx_deriving.show
    ppx_deriving_yojson
   )
  )
 )
